Fix issue #184, bump border width and increase contrast

--- a/css/editable-css.css
+++ b/css/editable-css.css
@@ -87,7 +87,7 @@ header h4 {
     display: block;
     margin: .2em 0;
     width: 100%;
-    border: 1px solid #d6dee0;
+    border: 2px solid #d6dee0;
     border-left: 5px solid #d6dee0;
     font-size: 14px;
     cursor: pointer;
@@ -103,8 +103,8 @@ header h4 {
 }
 
 .example-choice:hover {
-    border: 1px solid #666;
-    border-left: 5px solid #666;
+    border-color: #666;
+    border-left-color: #666;
 }
 
 .example-choice:before {
@@ -116,7 +116,7 @@ header h4 {
     opacity: 0;
     transition: all .2s ease-out;
     transform: translateY(-50%);
-    border-left: 10px solid #3f87a6;
+    border-left: 10px solid #1b76c4;
     border-top: 10px solid transparent;
     border-bottom: 10px solid transparent;
 }
@@ -124,6 +124,13 @@ header h4 {
 .example-choice.selected:before {
     opacity: 1;
     right: -1.5em;
+}
+
+.example-choice.selected {
+    border-color: #1b76c4;
+    border-left: 8px solid #1b76c4;
+    box-shadow: inset 0 2px 2px -2px rgba(0, 0, 0, .2);
+    cursor: text;
 }
 
 .example-choice.invalid:before {
@@ -135,16 +142,9 @@ header h4 {
     height: 20px;
 }
 
-.example-choice.selected {
-    border: 1px solid #3f87a6;
-    border-left: 5px solid #3f87a6;
-    box-shadow: inset 0 2px 2px -2px rgba(0, 0, 0, .2);
-    cursor: text;
-}
-
 .example-choice.invalid {
-    border: 1px solid #f8b83e;
-    border-left: 5px solid #f8b83e;
+    border-color: #ffb800;
+    border-left-color: #ffb800;
 }
 
 .example-choice > code {
